# AI-BOM-Inspector

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/actions/aibom-inspector-action/: action.yml
.github/workflows/: aibom-inspector-action.yml  ci.yml  scan-pr.yml
crates/: README.md
crates/advisories/: README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/licenses/: README.md
crates/report/: README.md
docs/: FAQ.md  HIGHEST_IMPACT_NEXT_MOVES.md  OUTPUTS.md  POLICY.md  POLICY_COOKBOOK.md  QUICKSTART.md  SCORING.md  ai-bom-extensions.md
docs/credibility-pack/: README.md
docs/credibility-pack/sboms/: langchain-sample.cdx.json  llamaindex-sample.cdx.json  transformers-sample.cdx.json
examples/: models.sample.json  report.sample.md
examples/demo/: aibom-report.cyclonedx.json  aibom-report.html  aibom-report.json  aibom-report.md  aibom-report.spdx.json  go.mod  models.json  package-lock.json  pyproject.toml  requirements.txt
integrations/github-action/: README.md
integrations/pre-commit/: .pre-commit-hooks.yaml  README.md
policies/: README.md
policies/examples/: default.yml  oss-friendly.yml  strict.yml
rust/tensor_fuzz/: Cargo.toml
rust/tensor_fuzz/src/: lib.rs
schemas/: policy.schema.json  report.schema.json
screenshots/: before-after.html
src/aibom_inspector/: __init__.py  bidi_guard.py  cli.py  dependency_scanner.py  model_inspector.py  pickle_inspector.py  policy.py  policy_graph.py  reporting.py  stack_discovery.py  tensor_fuzz.py  types.py  types_dependencies.py  types_models.py  types_report.py  types_risk.py
tests/: conftest.py  test_bidi_guard.py  test_cli.py  test_dependency_scanner.py  test_model_inspector.py  test_pickle_inspector.py  test_policy_enforcement_graph.py  test_policy_graph.py  test_policy_workflow.py  test_reporting.py  test_stack_discovery.py  test_tensor_fuzz.py
