[build-system]
requires = ["setuptools>=61.0", "setuptools-rust>=1.8.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibom-inspector"
version = "0.1.0"
description = "Security and risk analysis tool for AI projects (AI-BOM)."
authors = [
    { name = "Jordan Desjarlais", email = "jordandesjarlais.2022@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "packaging>=23.0",
    "tomli>=2.0.1; python_version < '3.11'",
]
keywords = ["ai", "security", "supply-chain", "bom", "risk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
[project.urls]
Homepage = "https://github.com/aibom-inspector/AI-BOM-Inspector"
Repository = "https://github.com/aibom-inspector/AI-BOM-Inspector"
"Bug Tracker" = "https://github.com/aibom-inspector/AI-BOM-Inspector/issues"

[project.optional-dependencies]
huggingface = ["huggingface_hub>=0.26.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
aibom = "aibom_inspector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-rust]
rust_extensions = [
    { name = "aibom_inspector._tensor_fuzz", path = "rust/tensor_fuzz/Cargo.toml", binding = "pyo3" }
]
